--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   latlong2: ^0.9.0
   flutter_date_pickers: ^0.4.3
   dropdown_search: ^5.0.6
+  fl_chart: ^0.70.0
 
 dev_dependencies:
   flutter_test:
